# Homework

./: Final_Task.md  Homework-2_Python-Data_Types.md  Homework-4_Python-Functions.md  Homework-5_Working-with-data.md  Homework-6_Classes_in_Python.md  Homework-7_Code-Flow.md  RULES.md  article.py  formatter.py  rss_reader.py  test_article.py  test_formatter.py
AndrewZabolotsky/: README.md  requirements.txt  rss_reader.py  setup.cfg  test_formatter.py
AndrewZabolotsky/rss_reader/: __main__.py  cache_utils.py  formatter.py  rss_reader.py
AndrewZabolotsky/tests/: test_article.py  test_cache_utils.py  test_formatter.py  test_rss_reader.py
Andrew_Zabolotsky/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py
Andrew_Zabolotsky/Session_4/: task_1.py  task_10.py  task_11.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
Session_5/: task_1.py  task_2.py  task_3.py  task_5.py  task_6.py
Session_6/: task_1.py  task_2.py  task_3.py  task_4.py  task_6.py  task_7.py  task_8.py
data/: lorem_ipsum.txt
modules/: legb.py  mod_a.py  mod_b.py  mod_c.py
