[metadata]
name = rss_reader_by_Andrew_Zabolotsky
version = 0.0.3
author = Andrew Zabolotsky
author_email = zebestroo@gmail.com
description = Pure Python command-line RSS reader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zebestroo/Homework/tree/final_task/AndrewZabolotsky
project_urls =
    Bug Tracker = https://github.com/zebestroo/Homework/tree/final_task/AndrewZabolotsky/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires = requests

[options.packages.find]
where = .
exclude = tests

[options.entry_points]
console_scripts =
    rss_reader = rss_reader.__main__:main
